@@ -1,3 +1,8 @@
+2004-04-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkuimanager.c (node_remove_ui_reference): Don't leak
+	list nodes.  (#138862, Morten Welinder)
+
 Tue Apr 13 12:24:49 2004  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeview.c (gtk_tree_view_destroy): remove unused
